<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.startup.EntranceFragment">

        <LinearLayout
            android:background="@color/colorPlatinum"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/imgEntrance"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:paddingBottom="20dp"
                    android:scaleType="fitXY"/>

                    <com.mahta.rastin.broadcastapplication.custom.EditTextPlus
                        android:id="@+id/edtNationalCode"
                        android:layout_gravity="center"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="@color/colorSecondaryText"
                        android:hint="@string/national_code"
                        android:background="@drawable/shape_rounded_edit_text"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:inputType="number"
                        app:fontEditText="shabnam.ttf"
                        android:maxLines="1"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <!--temporary disable password-->
            <com.mahta.rastin.broadcastapplication.custom.EditTextPlus
                android:visibility="gone"
                android:id="@+id/edtPassword"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/colorSecondaryText"
                android:hint="@string/password"
                android:background="@drawable/shape_rounded_edit_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginBottom="15dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center"
                app:fontEditText="shabnam.ttf"/>

            <com.andexert.library.RippleView
                android:id="@+id/btnEnterAsStudent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_button"
                rv_centered="true"
                app:rv_rippleDuration="100"
                app:rv_type="rectangle">

                <com.mahta.rastin.broadcastapplication.custom.TextViewPlus
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/enter_as_student"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#ffffff"
                    app:fontTextView="shabnam.ttf"/>

            </com.andexert.library.RippleView>


            <!--temporary disable guest-->
            <com.andexert.library.RippleView
                android:visibility="gone"
                android:id="@+id/btnEnterAsGuest"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_button_secondary"
                rv_centered="true"
                app:rv_rippleDuration="120"
                app:rv_type="rectangle">

                <com.mahta.rastin.broadcastapplication.custom.TextViewPlus
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/enter_as_guest"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#ffffff"
                    app:fontTextView="shabnam.ttf"/>

            </com.andexert.library.RippleView>

            <com.mahta.rastin.broadcastapplication.custom.TextViewPlus
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginBottom="20dp"
                android:text="@string/message_for_juniors"/>


            <!--temporary disable authentication-->
            <com.mahta.rastin.broadcastapplication.custom.TextViewPlus
                android:visibility="gone"
                android:id="@+id/txtAuthorize"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorize"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="15sp"
                app:fontTextView="shabnam.ttf"
                android:textColor="@color/colorPrimaryDark" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.wang.avi.AVLoadingIndicatorView
                    android:visibility="gone"
                    android:id="@+id/loaderLogo"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:indicatorName="LineScaleIndicator"
                    app:indicatorColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    />

                <com.mahta.rastin.broadcastapplication.custom.TextViewPlus
                    android:gravity="center"
                    android:id="@+id/txtIntroduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/introduce"
                    android:layout_alignParentBottom="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_marginBottom="20dp"/>

            </RelativeLayout>


        </LinearLayout>

</LinearLayout>